--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,4 +1,6 @@
 <script>
+    document.documentElement.style.scrollBehavior = 'auto';
+
     // Disable browser's automatic scroll restoration
     if ('scrollRestoration' in history) {
         history.scrollRestoration = 'manual';
