--- a/_sass/_publications.scss
+++ b/_sass/_publications.scss
@@ -293,7 +293,7 @@
 }
 
 .publication-item .venue {
-    color: var(--primary-color);
+    color: color-mix(in srgb, var(--primary-color) 80%, white);
     font-weight: 600;
     margin-bottom: 5px;
 }
