--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -91,7 +91,7 @@
 }
 
 .about-link {
-    flex: 1;
+    flex: 0 0 auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -105,7 +105,7 @@
     width: 1px;
     height: 30px;
     background-color: rgba(0, 0, 0, 0.2);
-    margin: 0 30px 0 10px;
+    margin: 0 40px;
     flex-shrink: 0;
 }
 
@@ -281,7 +281,7 @@
 
     .about-link-divider {
         height: 28px;
-        margin: 0 25px 0 8px;
+        margin: 0 32px;
     }
 
     .about-link-icon {
@@ -357,7 +357,7 @@
 
     .about-link-divider {
         height: 25px;
-        margin: 0 20px 0 6px;
+        margin: 0 30px;
     }
 
     .about-link-icon {
@@ -407,7 +407,7 @@
 
     .about-link-divider {
         height: 22px;
-        margin: 0 18px 0 5px;
+        margin: 0 24px;
     }
 
     .about-link-icon {
