--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -132,14 +132,16 @@
         padding: 30px 20px 20px 20px;
         align-items: center;
         text-align: center;
+        min-height: auto; /* 모바일에서는 내용 높이에 맞게 */
     }
 
     .professor-image {
         position: relative;
         top: auto;
         left: auto;
-        width: 180px;
-        height: 240px;
+        width: 100%;
+        max-width: 220px;
+        height: auto;
         margin: 0 auto 25px;
     }
 
